# MonoRepo-Origin

./: CMakeLists.txt  CW1.c  CW2.c  Even Odd.c  Fibionacci.c  Matrix .c  Prime Coprime.c  Quadratic Eq  Quadratic Eq.c  README.md  Star Pattern.c  array test .c  factorial.c  stringlooping.c
Texter/: IPV6 trials 2.py  IPV6 trials.py  Texter.patch  central base.py  noguitexter.py  proxyreq.py  text cache txt.txt
pythonProject/: Tecting GUI for mac.py  Texting GUI copy.py  Texting GUI main.py  arduino.py  backend base.py  client base.py  proxy 2.py  server backend.py  server client.py  ssh client.py  ssh server.py  text cache system 1.py  trials.py  trials4.py
